@@ -26,3 +26,6 @@ Changes
 
 * database driver needs to be changed to "mysql2" in /srv/www/obs/api/config/database.yml
 
+* webui configurations got moved from environments/*.rb to config/options.yml.
+  TODO: import config settings on update
+
